updated local links

--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
   <body>
     <canvas id="canvas1"></canvas>
     <img
-      src="../js-game/assets/all_project_images/overlay.png"
+      src="https://user-images.githubusercontent.com/107473816/224479699-64e45284-6538-401e-afc9-144940630591.png"
       id="overlay"
       alt=""
     />
     <img
-      src="../js-game/assets/all_project_images/obstacles.png"
+      src="https://user-images.githubusercontent.com/107473816/224479693-45f7ba36-1a01-40be-a50f-2b635b7fa649.png"
       id="obstacles"
       alt=""
     />
-    <img src="../js-game/assets/all_project_images/bull.png" id="bull" alt="" />
-    <img src="../js-game/assets/all_project_images/egg.png" id="egg" alt="" />
-    <img src="../js-game/assets/all_project_images/toad.png" id="toad" alt="">
-    <img src="../js-game/assets/all_project_images/larva.png" id="larva" alt="">
+    <img src="https://user-images.githubusercontent.com/107473816/224479675-4ba3e6d1-9d05-4835-b863-20f2f6c06ee2.png" id="bull" alt="" />
+    <img src="https://user-images.githubusercontent.com/107473816/224479678-73325d30-0799-416e-b226-81a63871458a.png" id="egg" alt="" />
+    <img src="https://user-images.githubusercontent.com/107473816/224479704-d00d452c-7940-4ed7-9d54-8651ae951767.png" id="toad" alt="">
+    <img src="https://user-images.githubusercontent.com/107473816/224479688-9cfb5ce0-21b2-43ef-9602-83c13d4fdfb3.png" id="larva" alt="">
   </body>
   <script src="./script/index.js"></script>
 </html>
